Fix handling of memory in PhaseIdealLoop::clone_loop_predicates()

XMLWordPrintable

    • b19

      We have:

      Predicate 1
      ..
      Predicate n

      profile predicate 1
      ..
      profile predicate n

      loop head

      Shenandoah write barriers produce memory, can be hoisted out of loop but
      can also depend on some predicate so may end up with:

      Predicate 1
      ..
      Predicate n

      profile predicate 1
      ..
      write barrier
      ...
      profile predicate n

      loop head

      In that case, all predicates branch to a region that dominates the
      uncommon trap call. Same is true for profile predicates. Because of the
      write barrier, the region for profile predicates has a memory phi to
      merge memory state before the barrier and after the barrier. Now when
      clone_loop_predicates() is called:

      Predicate 1
      ..
      Predicate n

      profile predicate 1
      ..
      write barrier
      ...
      profile predicate n

      cloned predicate

      cloned profile predicate

      loop head

      the cloned predicate branches to the region shared by all
      predicates. Same goes for the cloned profile predicate and the profile
      predicates. The memory state for the cloned predicate should be the one
      following the barrier but after cloning it's the one from the predicate
      n, before the barrier. That memory state needs to be adjusted.

            Assignee:
            Roland Westrelin
            Reporter:
            Roland Westrelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: