8212610: Fix handling of memory in PhaseIdealLoop::clone_loop_predicates()

Reviewed-by: kvn, thartmann